# sslcaudit

./: .gitignore  .travis.yml  COPYING.HEADER  README  TODO  clean.sh  create_deb.sh  kill.sh  prepend_file.sh  run.sh  sbdeb.cfg  setup.py  sslcaudit  t_sslcert_cn_verifying_client(self):  test-sslcaudit  test.sh
debian/: changelog  control  python-sslcaudit.preinst  rules
doc/: LOGGING.txt  example3-client-openssl.sh  example4-client-curl.sh  example4-server.sh  matrix.ods  mitm.odt  notes.txt  sslcaudit-alla.odt  sslcaudit-guide-20120501.odt  sslcaudit-user-guide-1.0.odt  sslcaudit-user-guide-1.1.odt  sslcaudit-user-guide.odt  sslcaudit.odt  sslcaudit2.odt
misc/: clean.sh
openssl-1.0.1b/: .gitignore  Makefile  build.sh
openssl-1.0.1b/apps/: openssl
openssl-1.0.1b/doc/: standards.txt
openssl-examples-20020110/: README  RUNNING  client.c  client.h  configure  read_write.c  read_write.h  wserver.c
optparse-gui/: CHANGELOG  COPYRIGHT  README  TODO  setup.py
optparse-gui/optparse_gui/: __init__.py
optparse-gui/tests/: test.py
src/: CertFactory.py  CertUtils.py  ConfigErrorException.py  Main.py  PlainTCPClient.py  UsageException.py
src/ClientAuditor/: ClientAuditor.py  ClientAuditorProfile.py  ClientAuditorProfileSet.py  ClientAuditorServer.py  ClientAuditorSet.py  ClientConnection.py  ClientConnectionAuditEvent.py  ClientConnectionAuditResult.py  ClientConnectionAuditor.py  ClientHandler.py  ConnectionHandler.py  SessionHandler.py  TCPClientAuditor.py  __init__.py
src/ClientAuditor/Dummy/: DummyClientAuditor.py  DummyClientAuditorSet.py  DummyProfile.py  DummyProfileSet.py  __init__.py
src/ClientAuditor/SSL/: DefaultSSLProfileSet.py  SSLClientAuditorSet.py  SSLClientConnectionAuditor.py  SelfSignedSSLClientAuditor.py  SelfSignedSSLProfile.py  __init__.py
src/Test/: SSLClient.py  SSLHammer.py  TCPClient.py  TCPHammer.py  TestConfig.py  __init__.py
src/core/: BaseClientAuditController.py  CertFactory.py  ClientAuditorServer.py  ClientConnectionAuditEvent.py  ClientHandler.py  ConfigError.py  FileBag.py  SSLCAuditCLI.py  Utils.py
src/modules/base/: BaseClientAuditorSet.py  BaseClientConnectionAuditor.py  BaseProfileFactory.py  BaseServerHandler.py
src/modules/dummy/: AuditorSet.py  ClientAuditorSet.py  DummyClientAuditor.py  DummyClientAuditorSet.py  DummyClientConnectionAuditor.py  DummyServerHandler.py  (+1 more)
src/test/: ConnectionHammer.py  ExternalCommandHammer.py  Hammer.py  SSLConnectionHammer.py  SSLHammer.py  TCPConnectionHammer.py  TCPHammer.py  TestConfig.py
sslcaudit/core/: BaseClientAuditController.py  CertFactory.py  ClientAuditorServer.py  ClientConnection.py  ClientConnectionAuditEvent.py  ClientHandler.py  ClientServerSessionHandler.py  ClientServerTestResultTreeTableModel.py  ConfigError.py  ConnectionAuditEvent.py  FileBag.py  ResultTreeItem.py  SSLCAuditCLI.py  SSLCAuditGUI.py  SSLCAuditGUIGenerated.py  SSLCAuditUI.py  SSLCauditGUIGenerated.py  ThreadingTCPServer.py  Utils.py  __init__.py  get_original_dst.py
sslcaudit/files/: dh2048.pem  dh512.pem  rsa512.pem
sslcaudit/gui/: SSLCAuditGUI.py
sslcaudit/profile/: __init__.py
sslcaudit/test/: ConnectionHammer.py  ExternalCommandHammer.py  Hammer.py  SSLConnectionHammer.py  TCPConnectionHammer.py  TestConfig.py
sslcaudit/ui/: ClientServerTestResultTreeTableModel.py  Makefile  ResultTreeItem.py  SSLCAuditCLI.py  SSLCAuditGUI.py  SSLCAuditGUIGenerated.py  SSLCAuditUI.py  main.ui
test/: TestCertFactory.py  TestCertUtils.py  TestClientAuditorServer.py  TestDummyClientAuditor.py  TestDummyModule.py  TestFileBag.py  TestM2CryptoBug.py  TestMain.py  TestMainDummy.py  TestMainSSL.py  TestModule.py  TestSSLCertModule.py  TestSSLProtoModule.py  _SimpleX509create.py  _TestM2CryptoBug.py  client-cert-verify--client.sh  client-cert-verify--server.sh  exthammer.sh  exthammer.sh_socat  fulltest-client.sh  fulltest.sh  kill.sh  ssl-client.py  ssl-server-export.py  ssl-server-export.py~  ssl-server-timeout.py  ssl-server-timeout.py~  ssl-server-v2.py  ssl-server-v2.py~  ssl-server-v23.py  ssl-server-v23.py~  ssl-server.py  ssl-server.py~  ssl-twisted-server.py  sslcaudit-selftest-all.sh  sslcaudit-test.gremwell.com-cert.pem  sslcaudit-test.gremwell.com-key.pem  test1.sh
test/certs/: dummy-dsa-cert.pem  dummy-dsa-key.pem  sslcaudit-test-cacert.pem  sslcaudit-test-cakey.pem  test-ca-cacert.p12  test-ca-cacert.pem  test-ca-cakey.pem  test-client-cert.pem  test-client-key.pem  www.example.com-cert.pem  www.example.com-key.pem
test/old/: _SimpleX509create.py  client.sh  exthammer.sh  exthammer.sh_socat  ssl-client.py  ssl-server-export.py  ssl-server.py
test/openssl-examples-20020110/: .gitignore  Makefile  Makefile.in  config.cache  config.status  configure  configure.in  sclient.c  server.c  server.h  wclient.c  wclient2.c  wserver2.c
ui/: Makefile  gui.py  main.ui
(+461 files in other folders)
